--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-streamlit==1.31.0
-pandas==2.1.4
-numpy==1.26.3
-requests==2.31.0
-plotly==5.18.0
-yfinance==0.2.36
-scikit-learn==1.4.0
+streamlit
+yfinance
+pandas
+numpy
+matplotlib
+seaborn
+scikit-learn
+scipy
+requests
+plotly
